[tool.poetry]
name = "repl_python3_disc"
version = "0.1.0"
description = ""
authors = ["AdamHo2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
gTTS = "^2.2.4"
discord = "^1.7.3"
PyNaCl = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
